; ModuleID = '/home/carl/AnghaBench/openssl/crypto/modes/extr_gcm128.c_CRYPTO_gcm128_new.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/modes/extr_gcm128.c_CRYPTO_gcm128_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @CRYPTO_gcm128_new(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call i32* @OPENSSL_malloc(i32 4)
  store i32* %6, i32** %5, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %13

8:                                                ; preds = %2
  %9 = load i32*, i32** %5, align 8
  %10 = load i8*, i8** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @CRYPTO_gcm128_init(i32* %9, i8* %10, i32 %11)
  br label %13

13:                                               ; preds = %8, %2
  %14 = load i32*, i32** %5, align 8
  ret i32* %14
}

declare dso_local i32* @OPENSSL_malloc(i32) #1

declare dso_local i32 @CRYPTO_gcm128_init(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
